[project]
name = "recipeparsingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "supabase>=2.28.3",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[project.scripts]
recipe-agent = "recipe_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
